--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,6 +10,6 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <h1 class="text-blue-400">Hello</h1>
+    <h1 class="text-red-700">Hello</h1>
 </body>
 </html>
