🔐  login users using passport

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -81,13 +81,13 @@
             </div>
 
             <div class="mt-6">
-              <form action="#" method="POST" class="space-y-6">
+              <form action="/login" method="POST" class="space-y-6">
                 <div>
-                  <label for="user" class="block text-sm font-medium text-gray-700">
+                  <label for="username" class="block text-sm font-medium text-gray-700">
                     Usuario
                   </label>
                   <div class="mt-1">
-                    <input id="user" name="user" type="text" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-sm shadow-sm placeholder-gray-400 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+                    <input id="username" name="username" type="text" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-sm shadow-sm placeholder-gray-400 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
                   </div>
                 </div>
 
