--- a/views/partials/dashboardHeader.hbs
+++ b/views/partials/dashboardHeader.hbs
@@ -77,9 +77,11 @@
                   Settings
                 </a>
 
-                <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">
-                  Sign out
-                </a>
+                <form action="/logout" method="POST">
+                  <button type="submit" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1">
+                    Sign out
+                  </button>
+                </form>
               </div>
             </div>
           </div>
@@ -153,9 +155,11 @@
               Settings
             </a>
 
-            <a href="#" class="block px-4 py-2 text-base font-medium text-gray-500 hover:text-gray-800 hover:bg-gray-100">
-              Sign out
-            </a>
+            <form action="/logout" method="POST">
+              <button type="submit" class="block px-4 py-2 text-base font-medium text-gray-500 hover:text-gray-800 hover:bg-gray-100">
+                Sign out
+              </button>
+            </form>
           </div>
         </div>
       </div>
