--- a/views/partials/dashboardHeader.hbs
+++ b/views/partials/dashboardHeader.hbs
@@ -18,7 +18,7 @@
           <div class="flex">
             {{! Logo }}
             <div class="flex-shrink-0 flex items-center">
-              <span>AWESOME BLOG</span>
+              <span>VG BLOG</span>
             </div>
 
             {{! Main menu }}
