--- a/views/dashboard/index.hbs
+++ b/views/dashboard/index.hbs
@@ -1,5 +1,5 @@
-{{> dashboardHeader title="Dashboard" }}
+{{> dashboard/header title="Dashboard" }}
 
 <div class="border-4 border-dashed border-gray-200 rounded-lg h-96"></div>
 
-{{> dashboardFooter}}
+{{> dashboard/footer}}
