✅ add logic to store a new category

--- a/views/dashboard/category/create.hbs
+++ b/views/dashboard/category/create.hbs
@@ -1,7 +1,11 @@
 {{> dashboard/header title="Categories" }}
 
 <div class="border-2 border-dashed border-gray-200 rounded-lg h-full p-4">
-  {{> category/form title="Category information" description="Here you can create your own categories." }}
+  {{> category/form
+    title="Category information"
+    description="Here you can create your own categories."
+    method="POST"
+  }}
 </div>
 
 {{> dashboard/footer}}
