--- a/views/dashboard/category/index.hbs
+++ b/views/dashboard/category/index.hbs
@@ -32,7 +32,8 @@
                   {{ this.name }}
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                  <a href="#" class="text-indigo-600 hover:text-indigo-900">Edit</a> or
+                  <a href="/dashboard/categories/{{ this.id }}/edit" class="text-indigo-600 hover:text-indigo-900">Edit</a>
+                  or
                   <a href="#" class="text-indigo-600 hover:text-indigo-900">Delete</a>
                 </td>
               </tr>
