--- a/views/dashboard/category/edit.hbs
+++ b/views/dashboard/category/edit.hbs
@@ -6,6 +6,7 @@
     description="Here you can edit the category information."
     method="PUT"
     csrfToken=csrfToken
+    category=category
   }}
 </div>
 
