--- a/views/partials/category/form.hbs
+++ b/views/partials/category/form.hbs
@@ -1,4 +1,4 @@
-<form class="space-y-8 divide-y divide-gray-200" method="{{ method }}" action="/dashboard/categories">
+<form class="space-y-8 divide-y divide-gray-200" method="POST" {{#if category}} action="/dashboard/categories/{{ category.id }}?_method=PUT" {{else}} action="/dashboard/categories" {{/if}}>
   <div class="space-y-8 divide-y divide-gray-200">
     <div>
       <input type="hidden" name="_csrf" value="{{ csrfToken }}">
