--- a/views/dashboard/category/index.hbs
+++ b/views/dashboard/category/index.hbs
@@ -34,7 +34,10 @@
                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
                   <a href="/dashboard/categories/{{ this.id }}/edit" class="text-indigo-600 hover:text-indigo-900">Edit</a>
                   or
-                  <a href="#" class="text-indigo-600 hover:text-indigo-900">Delete</a>
+                  <form class="inline-block" method="POST" action="/dashboard/categories/{{ this.id }}?_method=DELETE">
+                    <input type="hidden" name="_csrf" value="{{ ../csrfToken }}">
+                    <button type="submit" class="text-indigo-600 hover:text-indigo-900">Delete</a>
+                  </form>
                 </td>
               </tr>
               {{/each}}
