--- a/views/dashboard/category/index.hbs
+++ b/views/dashboard/category/index.hbs
@@ -1,13 +1,18 @@
 {{> dashboard/header title="Categories" }}
 
 <div class="border-2 border-dashed border-gray-200 rounded-lg h-full p-4">
-  <div>
-    <h3 class="text-lg leading-6 font-medium text-gray-900">
-      List of categories
-    </h3>
-    <p class="mt-1 text-sm text-gray-500">
-      Most recent categories added
-    </p>
+  <div class="flex justify-between">
+    <div class="">
+      <h3 class="text-lg leading-6 font-medium text-gray-900">
+        List of categories
+      </h3>
+      <p class="mt-1 text-sm text-gray-500">
+        Most recent categories added
+      </p>
+    </div>
+    <div class="text-sm">
+      <a href="/dashboard/categories/create" class="text-indigo-600 hover:text-indigo-900">Add one</a>
+    </div>
   </div>
 
   <div class="flex flex-col mt-6">
