--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -118,7 +118,7 @@
                 }}
 
                 <div>
-                  <button type="submit" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-sm shadow-sm text-sm font-medium text-white bg-blue-500 hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+                  <button type="submit" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-sm shadow-sm text-sm font-medium text-white bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                     Iniciar sesión
                   </button>
                 </div>
