--- a/views/partials/dashboard/header.hbs
+++ b/views/partials/dashboard/header.hbs
@@ -24,7 +24,7 @@
             {{! Main menu }}
             <div class="hidden sm:-my-px sm:ml-6 sm:flex sm:space-x-8">
               <!-- Current: "border-indigo-500 text-gray-900", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
-              <a href="/dashboard" class="border-blue-500 text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium" aria-current="page">
+              <a href="/dashboard" class="{{#if (isTabActive '/dashboard' currentUrl) }} text-gray-900 border-blue-500 {{else}} hover:border-gray-300 hover:text-gray-700 border-transparent text-gray-500 {{/if}} inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium" aria-current="page">
                 Dashboard
               </a>
 
@@ -32,7 +32,7 @@
                 Posts
               </a>
 
-              <a href="/dashboard/categories" class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
+              <a href="/dashboard/categories" class="{{#if (isTabActive '/dashboard/categories' currentUrl) }} text-gray-900 border-blue-500 {{else}} hover:border-gray-300 hover:text-gray-700 border-transparent text-gray-500 {{/if}} inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
                 Categories
               </a>
             </div>
