🚨 validate categories form and show the errors

--- a/views/dashboard/category/create.hbs
+++ b/views/dashboard/category/create.hbs
@@ -5,6 +5,7 @@
     title="Category information"
     description="Here you can create your own categories."
     csrfToken=csrfToken
+    errors=errors
   }}
 </div>
 
