🗒  create base structure for posts

--- a/views/dashboard/category/edit.hbs
+++ b/views/dashboard/category/edit.hbs
@@ -1,7 +1,7 @@
 {{> dashboard/header title="Categories" }}
 
 <div class="border-2 border-dashed border-gray-200 rounded-lg h-full p-4">
-  {{> category/form
+  {{> dashboard/category/form
     title="Category information"
     description="Here you can edit the category information."
     csrfToken=csrfToken
