--- a/views/partials/dashboard/post/form.hbs
+++ b/views/partials/dashboard/post/form.hbs
@@ -1,4 +1,4 @@
-<form class="space-y-8 divide-y divide-gray-200" method="POST" {{#if category}} action="/dashboard/categories/{{ category.id }}?_method=PUT" {{else}} action="/dashboard/categories" {{/if}}>
+<form class="space-y-8 divide-y divide-gray-200" method="POST" {{#if post}} action="/dashboard/posts/{{ post.id }}?_method=PUT" {{else}} action="/dashboard/posts" {{/if}}>
   <div class="space-y-8 divide-y divide-gray-200">
     <div>
       <input type="hidden" name="_csrf" value="{{ csrfToken }}">
@@ -18,7 +18,7 @@
             Content
           </label>
           <div class="mt-1">
-            <textarea required id="content" name="content" rows="3" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border border-gray-300 rounded-md">{{ category.description }}</textarea>
+            <textarea id="content" name="content" rows="3" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
           </div>
           <p class="mt-2 text-sm text-gray-500">Your entire post.</p>
           {{#if errors.content}}
@@ -31,7 +31,7 @@
 
   <div class="pt-5">
     <div class="flex justify-end">
-      <a href="/dashboard/categories" class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+      <a href="/dashboard/posts" class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
         Cancel
       </a>
       <button type="submit" class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
