--- a/views/dashboard/category/create.hbs
+++ b/views/dashboard/category/create.hbs
@@ -1,4 +1,5 @@
-{{> dashboard/header title="Categories" }}
+{{#> dashboard/header title="Categories" }}
+{{/dashboard/header}}
 
 <div class="border-2 border-dashed border-gray-200 rounded-lg h-full p-4">
   {{> dashboard/category/form
@@ -9,4 +10,5 @@
   }}
 </div>
 
-{{> dashboard/footer}}
+{{#> dashboard/footer}}
+{{/dashboard/footer}}
