--- a/views/partials/dashboard/post/form.hbs
+++ b/views/partials/dashboard/post/form.hbs
@@ -7,9 +7,6 @@
         <h3 class="text-lg leading-6 font-medium text-gray-900">
           {{ title }}
         </h3>
-        <p class="mt-1 text-sm text-gray-500">
-          {{ description }}
-        </p>
       </div>
 
       <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
@@ -32,25 +29,11 @@
           <div class="mt-1">
             <textarea required id="brief" name="brief" rows="3" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border border-gray-300 rounded-md">{{ post.brief }}</textarea>
           </div>
-          <p class="mt-2 text-sm text-gray-500">A brief of your post.</p>
           {{#if errors.Brief}}
           <p class="text-sm text-red-500">{{ errors.Brief }}</p>
           {{/if}}
         </div>
-      </div>
-    </div>
 
-    <div class="pt-8">
-      <div>
-        <h3 class="text-lg leading-6 font-medium text-gray-900">
-          Content
-        </h3>
-        <p class="mt-1 text-sm text-gray-500">
-          Content of your post.
-        </p>
-      </div>
-
-      <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
         <div class="sm:col-span-6">
           <label for="category" class="block text-sm font-medium text-gray-700">
             Category
@@ -71,20 +54,9 @@
           <div class="mt-1">
             <textarea id="content" name="content" rows="3" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
           </div>
-          <p class="mt-2 text-sm text-gray-500">Your entire post.</p>
           {{#if errors.content}}
           <p class="text-sm text-red-500">{{ errors.content }}</p>
           {{/if}}
-        </div>
-
-        <div class="sm:col-span-6">
-          <label for="slug" class="block text-sm font-medium text-gray-700">
-            Slug
-          </label>
-          <div class="mt-1">
-            <input type="text" name="slug" id="slug" autocomplete="slug" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border-gray-300 rounded-md" value="{{ category.slug }}">
-          </div>
-          <p class="mt-2 text-sm text-gray-500">Leave blank to generate automatically.</p>
         </div>
       </div>
     </div>
@@ -93,30 +65,39 @@
   <div class="pt-8">
     <div>
       <h3 class="text-lg leading-6 font-medium text-gray-900">
-        Other options
+        Extra information
       </h3>
-      <p class="mt-1 text-sm text-gray-500">
-        Aditional information.
-      </p>
     </div>
 
-    <div class="sm:col-span-6">
-      <fieldset class="mt-6">
-        <legend class="text-base font-medium text-gray-900">
-          Publishing
-        </legend>
-        <div class="mt-4 space-y-4">
-          <div class="relative flex items-start">
-            <div class="flex items-center h-5">
-              <input id="publish" name="publish" type="checkbox" class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded">
-            </div>
-            <div class="ml-3 text-sm">
-              <label for="publish" class="font-medium text-gray-700">Immediately</label>
-              <p class="text-gray-500">Publish this post immediately.</p>
+    <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
+      <div class="sm:col-span-6">
+        <label for="slug" class="block text-sm font-medium text-gray-700">
+          Slug
+        </label>
+        <div class="mt-1">
+          <input type="text" name="slug" id="slug" autocomplete="slug" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border-gray-300 rounded-md" value="{{ category.slug }}">
+        </div>
+        <p class="mt-2 text-sm text-gray-500">Leave blank to generate automatically.</p>
+      </div>
+
+      <div class="sm:col-span-6">
+        <fieldset>
+          <legend class="text-base font-medium text-gray-900">
+            Publishing
+          </legend>
+          <div class="mt-4 space-y-4">
+            <div class="relative flex items-start">
+              <div class="flex items-center h-5">
+                <input id="publish" name="publish" type="checkbox" class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded">
+              </div>
+              <div class="ml-3 text-sm">
+                <label for="publish" class="font-medium text-gray-700">Immediately</label>
+                <p class="text-gray-500">Publish this post immediately.</p>
+              </div>
             </div>
           </div>
-        </div>
-      </fieldset>
+        </fieldset>
+      </div>
     </div>
   </div>
 
