--- a/views/dashboard/category/index.hbs
+++ b/views/dashboard/category/index.hbs
@@ -1,4 +1,5 @@
-{{> dashboard/header title="Categories" }}
+{{#> dashboard/header title="Categories" }}
+{{/dashboard/header}}
 
 <div class="border-2 border-dashed border-gray-200 rounded-lg h-full p-4">
   <div class="flex justify-between">
@@ -54,4 +55,5 @@
   </div>
 </div>
 
-{{> dashboard/footer}}
+{{#> dashboard/footer}}
+{{/dashboard/footer}}
