--- a/views/dashboard/post/create.hbs
+++ b/views/dashboard/post/create.hbs
@@ -7,6 +7,7 @@
   {{> dashboard/post/form
     title="Post information"
     description="Here you can create your own posts."
+    categories=categories
     csrfToken=csrfToken
     errors=errors
   }}
@@ -39,5 +40,4 @@
     ],
   });
 </script>
-<script src="/js/post.js"></script>
 {{/dashboard/footer}}
