--- a/views/partials/dashboard/post/form.hbs
+++ b/views/partials/dashboard/post/form.hbs
@@ -39,10 +39,11 @@
             Category
           </label>
           <div class="mt-1">
-            <select id="category" name="category" autocomplete="category" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
-              <option>Javascript</option>
-              <option>Go</option>
-              <option>PHP</option>
+            <select required id="category" name="category" autocomplete="category" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+              <option value="">Select one category</option>
+              {{#each categories}}
+              <option value="{{ this._id }}">{{ this.name }}</option>
+              {{/each}}
             </select>
           </div>
         </div>
