⚫️ use the same rounded borders in the forms

--- a/views/partials/dashboard/category/form.hbs
+++ b/views/partials/dashboard/category/form.hbs
@@ -15,7 +15,7 @@
             Name
           </label>
           <div class="mt-1">
-            <input required type="text" name="name" id="name" autocomplete="name" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border-gray-300 rounded-md" value="{{ category.name }}">
+            <input required type="text" name="name" id="name" autocomplete="name" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border-gray-300 rounded-sm" value="{{ category.name }}">
             {{#if errors.name}}
             <p class="text-sm text-red-500">{{ errors.name }}</p>
             {{/if}}
@@ -27,7 +27,7 @@
             Description
           </label>
           <div class="mt-1">
-            <textarea required id="description" name="description" rows="3" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border border-gray-300 rounded-md">{{ category.description }}</textarea>
+            <textarea required id="description" name="description" rows="3" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border border-gray-300 rounded-sm">{{ category.description }}</textarea>
           </div>
           {{#if errors.description}}
           <p class="text-sm text-red-500">{{ errors.description }}</p>
@@ -49,7 +49,7 @@
             Slug
           </label>
           <div class="mt-1">
-            <input type="text" name="slug" id="slug" autocomplete="slug" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border-gray-300 rounded-md" value="{{ category.slug }}">
+            <input type="text" name="slug" id="slug" autocomplete="slug" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border-gray-300 rounded-sm" value="{{ category.slug }}">
           </div>
           <p class="mt-2 text-sm text-gray-500">Leave blank to generate automatically.</p>
         </div>
@@ -59,10 +59,10 @@
 
   <div class="pt-5">
     <div class="flex justify-end">
-      <a href="/dashboard/categories" class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+      <a href="/dashboard/categories" class="bg-white py-2 px-4 border border-gray-300 rounded-sm shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
         Cancel
       </a>
-      <button type="submit" class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+      <button type="submit" class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-sm text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
         Save
       </button>
     </div>
