--- a/views/partials/dashboard/post/form.hbs
+++ b/views/partials/dashboard/post/form.hbs
@@ -15,7 +15,7 @@
             Title
           </label>
           <div class="mt-1">
-            <input required type="text" name="title" id="title" autocomplete="title" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border-gray-300 rounded-md" value="{{ post.title }}">
+            <input required type="text" name="title" id="title" autocomplete="title" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border-gray-300 rounded-sm" value="{{ post.title }}">
             {{#if errors.title}}
             <p class="text-sm text-red-500">{{ errors.title }}</p>
             {{/if}}
@@ -27,7 +27,7 @@
             Brief
           </label>
           <div class="mt-1">
-            <textarea required id="brief" name="brief" rows="3" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border border-gray-300 rounded-md">{{ post.brief }}</textarea>
+            <textarea required id="brief" name="brief" rows="3" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border border-gray-300 rounded-sm">{{ post.brief }}</textarea>
           </div>
           {{#if errors.Brief}}
           <p class="text-sm text-red-500">{{ errors.Brief }}</p>
@@ -39,7 +39,7 @@
             Category
           </label>
           <div class="mt-1">
-            <select required id="category" name="category" autocomplete="category" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+            <select required id="category" name="category" autocomplete="category" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-sm">
               <option value="">Select one category</option>
               {{#each categories}}
               <option value="{{ this._id }}">{{ this.name }}</option>
@@ -53,7 +53,7 @@
             Content
           </label>
           <div class="mt-1">
-            <textarea id="content" name="content" rows="3" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
+            <textarea id="content" name="content" rows="3" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border border-gray-300 rounded-sm"></textarea>
           </div>
           {{#if errors.content}}
           <p class="text-sm text-red-500">{{ errors.content }}</p>
@@ -76,7 +76,7 @@
           Slug
         </label>
         <div class="mt-1">
-          <input type="text" name="slug" id="slug" autocomplete="slug" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border-gray-300 rounded-md" value="{{ category.slug }}">
+          <input type="text" name="slug" id="slug" autocomplete="slug" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border-gray-300 rounded-sm" value="{{ category.slug }}">
         </div>
         <p class="mt-2 text-sm text-gray-500">Leave blank to generate automatically.</p>
       </div>
@@ -104,10 +104,10 @@
 
   <div class="pt-5">
     <div class="flex justify-end">
-      <a href="/dashboard/posts" class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+      <a href="/dashboard/posts" class="bg-white py-2 px-4 border border-gray-300 rounded-sm shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
         Cancel
       </a>
-      <button type="submit" class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+      <button type="submit" class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-sm text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
         Save
       </button>
     </div>
