📋 improve the table to list posts

--- a/views/dashboard/post/index.hbs
+++ b/views/dashboard/post/index.hbs
@@ -47,13 +47,13 @@
                   {{ this.title }}
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-                  {{ this.createdAt }}
+                  {{ readableDate this.createdAt }}
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-                  {{ this.updatedAt }}
+                  {{ readableDate this.updatedAt }}
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-                  {{ this.publishedAt }}
+                  {{ readableDate this.publishedAt }}
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
                   <a href="/dashboard/posts/{{ this.id }}/edit" class="text-blue-500 hover:text-blue-700">Edit</a>
