--- a/views/partials/dashboard/post/form.hbs
+++ b/views/partials/dashboard/post/form.hbs
@@ -29,8 +29,8 @@
           <div class="mt-1">
             <textarea required id="brief" name="brief" rows="3" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border border-gray-300 rounded-sm">{{ post.brief }}</textarea>
           </div>
-          {{#if errors.Brief}}
-          <p class="text-sm text-red-500">{{ errors.Brief }}</p>
+          {{#if errors.brief}}
+          <p class="text-sm text-red-500">{{ errors.brief }}</p>
           {{/if}}
         </div>
 
@@ -42,7 +42,7 @@
             <select required id="category" name="category" autocomplete="category" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-sm">
               <option value="">Select one category</option>
               {{#each categories}}
-              <option value="{{ this._id }}">{{ this.name }}</option>
+              <option {{#if (selectOption ../post.category this.id) }} selected {{/if}} value="{{ this.id }}">{{ this.name }}</option>
               {{/each}}
             </select>
           </div>
@@ -53,7 +53,7 @@
             Content
           </label>
           <div class="mt-1">
-            <textarea id="content" name="content" rows="3" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border border-gray-300 rounded-sm"></textarea>
+            <textarea id="content" name="content" rows="3" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border border-gray-300 rounded-sm">{{ post.content }}</textarea>
           </div>
           {{#if errors.content}}
           <p class="text-sm text-red-500">{{ errors.content }}</p>
@@ -76,7 +76,7 @@
           Slug
         </label>
         <div class="mt-1">
-          <input type="text" name="slug" id="slug" autocomplete="slug" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border-gray-300 rounded-sm" value="{{ category.slug }}">
+          <input type="text" name="slug" id="slug" autocomplete="slug" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border-gray-300 rounded-sm" value="{{ post.slug }}">
         </div>
         <p class="mt-2 text-sm text-gray-500">Leave blank to generate automatically.</p>
       </div>
@@ -89,7 +89,7 @@
           <div class="mt-4 space-y-4">
             <div class="relative flex items-start">
               <div class="flex items-center h-5">
-                <input id="publish" name="publish" type="checkbox" class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded">
+                <input {{#if post.publishedAt}} checked {{/if}} id="publish" name="publish" type="checkbox" class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded">
               </div>
               <div class="ml-3 text-sm">
                 <label for="publish" class="font-medium text-gray-700">Immediately</label>
