🇬🇧  translate to english login view

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -15,7 +15,7 @@
           <div>
             <img class="h-12 w-auto" src="./images/rocketship.svg" alt="Rocket ship">
             <h2 class="mt-6 text-3xl font-extrabold text-gray-900">
-              Inicia sesión
+              Sign in
             </h2>
             {{!
             <p class="mt-2 text-sm text-gray-600">
@@ -84,7 +84,7 @@
               <form action="/login" method="POST" class="space-y-6">
                 <div>
                   <label for="username" class="block text-sm font-medium text-gray-700">
-                    Usuario
+                    Username
                   </label>
                   <div class="mt-1">
                     <input id="username" name="username" type="text" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-sm shadow-sm placeholder-gray-400 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
@@ -93,7 +93,7 @@
 
                 <div class="space-y-1">
                   <label for="password" class="block text-sm font-medium text-gray-700">
-                    Contraseña
+                    Password
                   </label>
                   <div class="mt-1">
                     <input id="password" name="password" type="password" autocomplete="current-password" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-sm shadow-sm placeholder-gray-400 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
@@ -119,7 +119,7 @@
 
                 <div>
                   <button type="submit" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-sm shadow-sm text-sm font-medium text-white bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
-                    Iniciar sesión
+                    Sign in
                   </button>
                 </div>
               </form>
