--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -116,7 +116,9 @@
                   </div>
                 </div>
                 }}
-
+                {{#if error}}
+                  <p class="text-red-500">{{ error }}</p>
+                {{/if}}
                 <div>
                   <button type="submit" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-sm shadow-sm text-sm font-medium text-white bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                     Sign in
