✏️  Update footer description

--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -34,7 +34,7 @@
 
 <div class="fixed bottom-0 w-full py-4">
   <p class="text-center">@vcgtz {{#getCurrentYear}}{{/getCurrentYear}}</p>
-  <p class="text-center italic text-sm text-gray-400">Después de tantos diseños, al final decidí dejar este sitio lo más sencillo posible.</p>
+  <p class="text-center italic text-sm text-gray-400">Sitio web diseñado bajo los más altos estándares de diseño, de los cuales hasta Steve Jobs estaría orgulloso.</p>
 </div>
 
 {{#> home/footer}}
