--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -13,7 +13,7 @@
     <div class="flex-auto px-8 md:w-4/12 sm:w-auto">
       <ul>
         <li>
-          <a class="line-through cursor-not-allowed	text-gray-400" href="#">Blog</a>
+          <a class="hover:text-blue-500" href="/blog">Blog</a>
         </li>
         <li>
           <a class="line-through cursor-not-allowed	text-gray-400" href="#">Curriculum</a>
