--- a/views/partials/blog/header.hbs
+++ b/views/partials/blog/header.hbs
@@ -4,7 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  {{#if this.customCss}}
+  <link rel="stylesheet" href="/styles/customStyle.css">
+  {{else}}
   <link rel="stylesheet" href="/styles/style.css">
+  {{/if}}
 
   {{> @partial-block }}
 
