--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
     <title>Awesome Blog</title>
 
 
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./css/dashboard_styles.css">
 </head>
 <body>
     <h1 class="text-red-700">Hello</h1>
