--- a/views/blog/post.hbs
+++ b/views/blog/post.hbs
@@ -1,5 +1,5 @@
 {{#> blog/header title="Vicente Gutiérrez | Blog" }}
-<link rel="stylesheet" type="text/css" href="/styles/prism.css">
+<link rel="stylesheet" type="text/css" href="/css/prism.css">
 {{/blog/header}}
 
 <div class="max-w-7xl mx-auto px-4 pt-2 sm:px-6 sm:pt-2 lg:px-8 lg:pt-4">
