--- a/views/dashboard/post/create.hbs
+++ b/views/dashboard/post/create.hbs
@@ -1,5 +1,5 @@
 {{#> dashboard/header title="Posts" }}
-<link rel="stylesheet" type="text/css" href="/styles/prism.css">
+<link rel="stylesheet" type="text/css" href="/css/prism.css">
 <script src="https://cdn.tiny.cloud/1/slp3467c2gikluchlfj97atc38q9a2tf4fb36n1snin5cfxj/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
 {{/dashboard/header}}
 
