📝 Update blog styles

--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -6,7 +6,7 @@
     <div class="col-2"></div>
 
     <div class="col-8">
-     <h1 class="text-xl">Vicente's Web Site</h1>
+     <h1>Vicente's Web Site</h1>
     </div>
 
     <div class="col-2"></div>
@@ -14,13 +14,13 @@
 
   <div class="row">
     <div class="col-2"></div>
-    <div class="col-6">
+    <div class="col-6 fw-light">
       <p>Hola! me llamo Vicente Gutiérrez y te doy la bienvenida a mi sitio web.</p>
       <p>Soy desarrollador de software y actualmente trabajo principalmente con NodeJS (JavaScript) y Laravel (PHP).</p>
       <p>Del lado derecho encontrarás la forma de contactarme y algunos links a parte de mi trabajo.</p>
     </div>
     <div class="col-2">
-      <ul class="list-unstyled">
+      <ul class="list-unstyled fw-light">
         <li>
           <a class="text-decoration-none text-warning" href="/blog">Blog</a>
         </li>
@@ -43,7 +43,7 @@
 </div>
 
 <div class="fixed-bottom">
-  <p class="text-center"><small>@vcgtz {{#getCurrentYear}}{{/getCurrentYear}}</small></p>
+  <p class="text-center fw-bold"><small>@vcgtz {{#getCurrentYear}}{{/getCurrentYear}}</small></p>
 </div>
 
 {{#> home/footer}}
